--- a/Style/style.css
+++ b/Style/style.css
@@ -5,7 +5,6 @@
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
 }
-
 :root{
     --casiBlanco: aliceblue;
     --temaVerde:rgb(16, 228, 204);
@@ -96,7 +95,7 @@ a{
     flex-wrap: wrap;
     flex-direction: column;
     gap: 80px;
-    background-image: url(/img/imgPresentacion.jpg);
+    background-image: url(https://i.ibb.co/1KZ0s8S/img-Presentacion.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -163,7 +162,6 @@ a{
     border: px solid var(--temaVerde);
     border-radius: 10px;
 }
-
 .sobresalir :hover{
     height: 55%;
     transition: 0.5s ease-in-out;
@@ -173,8 +171,6 @@ a{
     top: -5%; */
     left: -5%;
 }
-
-
 a:hover{
     transition: 0.5s ease-in-out;
     background-color: var(--temaVerdeTransparente);
@@ -186,7 +182,7 @@ a:hover{
     flex-direction: column;
     gap: 80px;
     box-shadow: 0px 6px 11px 5px rgba(0, 0, 0, 0.25);
-    background-image: url(/img/imgNosotros.png);
+    background-image: url(https://i.ibb.co/whvLmZm/img-Nosotros.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -208,7 +204,7 @@ a:hover{
     padding-bottom: 2rem;
 }
 .seccionSoluciones{
-    background: linear-gradient(rgba(241, 241, 241, 0.5),rgba(241, 241, 241, 0.5)),url(/img/imgSoluciones.jpeg);
+    background: linear-gradient(rgba(241, 241, 241, 0.5),rgba(241, 241, 241, 0.5)),url(https://i.ibb.co/F8HywcY/img-Soluciones.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -263,7 +259,7 @@ a:hover{
 }
 .imgColaborador1{
     
-    background-image: url(/img/Colaborador1.jpg);
+    background-image: url(https://i.ibb.co/Lhb0ZKf/Colaborador1.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -273,7 +269,7 @@ a:hover{
     border-radius: 15px;
 }
 .imgColaborador2{
-    background-image: url(/img/Colaborador2.jpg);
+    background-image: url(https://i.ibb.co/4SsXNRb/Colaborador2.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -284,7 +280,7 @@ a:hover{
     border-radius: 15px;
 }
 .imgColaborador3{
-    background-image: url(/img/Colaborador3.jpg);
+    background-image: url(https://i.ibb.co/rtN3ksH/Colaborador3.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -293,10 +289,9 @@ a:hover{
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 15px;
 }
-
 .imgSolucion1{
     
-    background-image: url(/img/solucion1.png);
+    background-image: url(https://i.ibb.co/sqQ9WJ8/solucion1.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -306,7 +301,7 @@ a:hover{
     border-radius: 15px;
 }
 .imgSolucion2{
-    background-image: url(/img/solucion2.png);
+    background-image: url(https://i.ibb.co/VvXVyDV/solucion2.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -317,7 +312,7 @@ a:hover{
     border-radius: 15px;
 }
 .imgSolucion3{
-    background-image: url(/img/solucion3.jpg);
+    background-image: url(https://i.ibb.co/C0ZGCHq/solucion3.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -326,7 +321,6 @@ a:hover{
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 15px;
 }
-
 .seccionOficinas{
     background-color: var(--temaVerdeTransparente);
     display: flex;
@@ -356,17 +350,6 @@ iframe{
    /*  line-height: 19px; */
 }
 
-.Prueba{
-    background-image: url(https://i.ibb.co/whvLmZm/img-Nosotros.png);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    
-    width:100%;
-    height: 192px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 15px;
-}
 
 
 /* Media Querys */
