--- a/Style/style.css
+++ b/Style/style.css
@@ -13,6 +13,18 @@
     --temaRosa: rgb(225, 23, 68);
     --temaVerdeTransparente: rgb(16, 228, 204,30%);
 }
+body::-webkit-scrollbar{
+    width:  15px;
+}
+body::-webkit-scrollbar-thumb{
+    background-color: rgba(35, 35, 35, 0.5);
+    border-radius: 15px;
+
+}
+body::-webkit-scrollbar-thumb:hover{
+    background-color: rgba(35, 35, 35);
+}
+
 /* ----- Comienza código css de Yair ----- */
 
 .delFooter1{
@@ -32,7 +44,7 @@ footer{
 }
 footer p{
     
-    padding-top: 17vh ;
+    padding-top: 21vh ;
     color: var(--casiBlanco);
     font-weight:lighter;
     font-size: 1rem;
@@ -95,7 +107,8 @@ a{
     flex-wrap: wrap;
     flex-direction: column;
     gap: 80px;
-    background-image: url(https://i.ibb.co/1KZ0s8S/img-Presentacion.jpg);
+    box-shadow: 0px 6px 11px 5px rgba(0, 0, 0, 0.25);
+    background-image: linear-gradient(rgba(94, 52, 52, 0.55),rgba(94, 52, 52, 0.55)), url(https://i.ibb.co/1KZ0s8S/img-Presentacion.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -105,7 +118,6 @@ a{
     padding-top: 200px;
     padding-bottom: 150px;
     text-align:center ;
-    box-shadow: 0px 6px 11px 5px rgba(0, 0, 0, 0.25);
 }
 p{
     line-height: 2;
@@ -167,7 +179,7 @@ a{
     transition: 0.5s ease-in-out;
     /* width: 110%; */
     border: 2px solid var(--casiBlanco);
-   /*  position:relative ;
+/*     position:relative ;
     top: -5%; */
     left: -5%;
 }
@@ -182,7 +194,8 @@ a:hover{
     flex-direction: column;
     gap: 80px;
     box-shadow: 0px 6px 11px 5px rgba(0, 0, 0, 0.25);
-    background-image: url(https://i.ibb.co/whvLmZm/img-Nosotros.png);
+   /*  background-image: linear-gradient(rgba(180, 174, 84, 0.30),rgba(180, 174, 84, 0.20)), url(https://i.ibb.co/whvLmZm/img-Nosotros.png); */
+   background-image:  url(https://i.ibb.co/whvLmZm/img-Nosotros.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -215,6 +228,7 @@ a:hover{
     align-items: center;
     align-content: center;
     padding-bottom: 2rem;
+    box-shadow: 0px 6px 11px 5px rgba(0, 0, 0, 0.25);
 }
 .tituloColaboradores{
     font-size: 2.5rem;
