Posicionamiento final de elementos. faltan iconos del footer.

--- a/Style/style.css
+++ b/Style/style.css
@@ -13,18 +13,26 @@
     --temaRosa: rgb(225, 23, 68);
     --temaVerdeTransparente: rgb(16, 228, 204,30%);
 }
+html{
+    scroll-behavior: smooth;
+}
 body::-webkit-scrollbar{
     width:  15px;
 }
 body::-webkit-scrollbar-thumb{
     background-color: rgba(35, 35, 35, 0.5);
-    border-radius: 15px;
+    
 
 }
 body::-webkit-scrollbar-thumb:hover{
     background-color: rgba(35, 35, 35);
 }
-
+.margenScroll{
+    scroll-margin-top: 11ex;
+}
+.margenScrollNosotros{
+    scroll-margin-top: 4ex;
+}
 /* ----- Comienza código css de Yair ----- */
 
 .delFooter1{
@@ -51,7 +59,7 @@ footer p{
 }
 body{
     background-color: whitesmoke;
-    font-size: 16px;
+    /* font-size: 16px; */
 }
 header{
     width: 100%;
@@ -115,14 +123,39 @@ a{
     text-shadow: 0 0 8px rgb(0, 0, 0,0.8);
     font-size: 2.2rem;
     color:var(--casiBlanco) ;
-    padding-top: 200px;
+    padding-top: 210px;
     padding-bottom: 150px;
     text-align:center ;
+    
 }
-p{
+.presentacionEmpresa p{
     line-height: 2;
-    font-size: 20px;
+    font-size: 1.5rem;
+    font-weight:normal;
+}
+.nosotros h3{
+    position: relative;
+    margin-left: 7vw;
+    font-weight:bold;
+    font-size: 2.5rem;
+    margin-top: 5rem;
+    padding: 2rem;
+    color: rgba(7, 47, 105,1);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);   
+}
+.nosotros p{
+    position: relative;
+    margin-left: 5vw;
+    max-width: 38rem;
+    line-height: 2;
+    font-size: 1.5rem;
     font-weight:600;
+    text-shadow: 0 0 8px rgb(0, 0, 0,0.8);
+    text-align: center;
+}
+.botonContactenosDeNosotros{
+    position: relative;
+    margin-left: 40vw;
 }
 .imgPresentacion{
     width: 100%;
@@ -192,21 +225,18 @@ a:hover{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    gap: 80px;
+    justify-content: center;
+    gap: 4vh;
     box-shadow: 0px 6px 11px 5px rgba(0, 0, 0, 0.25);
-   /*  background-image: linear-gradient(rgba(180, 174, 84, 0.30),rgba(180, 174, 84, 0.20)), url(https://i.ibb.co/whvLmZm/img-Nosotros.png); */
-   background-image:  url(https://i.ibb.co/whvLmZm/img-Nosotros.png);
+    background-image:  url(https://i.ibb.co/whvLmZm/img-Nosotros.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    text-shadow: 0 0 8px rgb(0, 0, 0,0.8);
-    font-size: 2.2rem;
     color:var(--casiBlanco) ;
-    padding-top: 200px;
     padding-bottom: 150px;
-    text-align:center ;
 }
 .seccionColaboradores{
+    font-size: 2rem;
     background-color: var(--temaVerdeTransparente);
     display: flex;
     flex-wrap: wrap;
@@ -215,6 +245,15 @@ a:hover{
     align-items: center;
     align-content: center;
     padding-bottom: 2rem;
+}
+.seccionNosotros{
+    font-size: 2rem;
+    background-color: var(--temaVerdeTransparente); 
+    font-size: 2.5rem;
+    padding: 2rem;
+    color: rgb(7, 47, 105);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    text-align: center;   
 }
 .seccionSoluciones{
     background: linear-gradient(rgba(241, 241, 241, 0.5),rgba(241, 241, 241, 0.5)),url(https://i.ibb.co/F8HywcY/img-Soluciones.jpg);
@@ -231,6 +270,7 @@ a:hover{
     box-shadow: 0px 6px 11px 5px rgba(0, 0, 0, 0.25);
 }
 .tituloColaboradores{
+    text-align: center;
     font-size: 2.5rem;
     padding: 2rem;
     color: rgb(7, 47, 105);
@@ -248,6 +288,12 @@ a:hover{
     padding-top: 2rem;
     padding-bottom: 2rem;
     text-align:center ;
+}
+.leyendaMapas{
+    font-size: 1.5rem;
+    padding: 2rem;
+    color: rgb(7, 47, 105);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .colaborador1{
     height: 410px;
@@ -371,11 +417,14 @@ iframe{
     header{
         font-size: 12px;
     }
+    body{
+        font-size: 12px;
+    }
     .favicon{
         width: 42px;
         height: 22px;
     }
-    .presentacionEmpresa h2{
+    h2{
         font-size: 2rem;
     }
 }
@@ -383,14 +432,15 @@ iframe{
     header{
         font-size: 10px;
     }
+    body{
+        font-size: 10px;
+    }
     .favicon{
         width: 38px;
         height: 18px;
     }
-    .presentacionEmpresa h2{
+    h2{
         font-size: 1rem;
     }
-
 }
-
 /* ----- Termina código css de Yair ----- */
